# PoultryAI

./: cloud_ml_server.py  firebase_db.py  main.py  pubspec.yaml  pyproject.toml  render.yaml  requirements_apk.txt  requirements_server.txt
