[project]
name = "poultry_farm_ai"
version = "1.0.0"
dependencies = [
  "flet==0.28.3",
  "requests==2.32.3",
]

[tool.flet]
name = "Poultry Farm AI"
org = "com.poultry.farm"
product = "poultry_farm_ai"
description = "Poultry Farm AI Dashboard - ESP32 to Firebase to Cloud ML"
version = "1.0.0"

[tool.flet.android]
permissions = ["INTERNET", "ACCESS_NETWORK_STATE", "ACCESS_WIFI_STATE"]
